--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".WeeklyMenu"/>
+        <activity android:name=".HomeScreen"/>
+        <activity android:name=".LogIn"/>
+        <activity android:name=".SignUp"/>
+        <activity android:name=".LineLength"/>
+        <activity android:name=".LogInSignUpActivity"/>
     </application>
 
 </manifest>
