--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
         }
     }
 }
+allprojects {
+    repositories {
+        maven { url 'https://www.jitpack.io' }
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -27,6 +32,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation "com.google.android.gms:play-services-gcm:10.2.1"
 
 
 }
+apply plugin: 'com.google.gms.google-services'
